minor alignment fix to h4s

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ section > h2 {
     background-color: #ffffff 0.0;
 }
 
-section h3, section p {
+section h3, section h4 {
     padding: 15px;
 }
 
